--- a/ecclesia/lectio/mateo/mateo8.html
+++ b/ecclesia/lectio/mateo/mateo8.html
@@ -1261,9 +1261,22 @@
           <details class="select">
             <summary>Metanoia</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>
+                El Señor cargó con nuestra dolencias y pecados, enseñandome como
+                hacer del mal oportunidad del bien, para que tenga una vida
+                nueva
+              </li>
+              <li>La centralidad de la compasión en el servicio</li>
+              <li>
+                La importancia de la Gracia que precede a toda acción. Gracia
+                que actúa en el que da como en el que recibe
+              </li>
+              <li>
+                "El hombre no es redimido por el sufrimiento en sí, sino por el
+                amor que hay en el sufrimiento. Cristo, que cargó con nuestras
+                enfermedades, ha transformado el dolor en lugar de encuentro con
+                el amor de Dios. Spe Salvi. Benedicto XVI
+              </li>
               <li></li>
             </ol>
           </details>
@@ -1305,30 +1318,289 @@
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
+            <ol>
+              <li>
+                <b>Biblia de Jerusalén (1976)</b><br />
+                Al ver Jesús que la gente le rodeaba, mandó pasar a la orilla
+                opuesta.<br />
+                Un escriba se acercó y le dijo: “Maestro, te seguiré
+                adondequiera que vayas.”<br />
+                Jesús le responde: “Las zorras tienen guaridas y las aves del
+                cielo nidos; pero el Hijo del hombre no tiene dónde reclinar la
+                cabeza.”<br />
+                Otro de sus discípulos le dijo: “Señor, déjame ir primero a
+                enterrar a mi padre.”<br />
+                Pero Jesús le dijo: “Sígueme, y deja que los muertos entierren a
+                sus muertos.”<br />
+              </li>
+
+              <li>
+                <b>Vulgata (latín)</b><br />
+                Videns autem Jesus turbas multas circum se, jussit ire trans
+                fretum.<br />
+                Et accedens unus scriba, ait illi: Magister, sequar te quocumque
+                ieris.<br />
+                Et dicit ei Jesus: Vulpes foveas habent, et volucres caeli
+                nidos: Filius autem hominis non habet ubi caput reclinet.<br />
+                Alius autem de discipulis ejus dixit illi: Domine, permitte me
+                primum ire, et sepelire patrem meum.<br />
+                Jesus autem ait illi: Sequere me, et dimitte mortuos sepelire
+                mortuos suos.<br />
+              </li>
+
+              <li>
+                <b>Nueva Versión Internacional (NVI)</b><br />
+                Cuando Jesús vio a mucha gente a su alrededor, dio orden de
+                pasar al otro lado del lago.<br />
+                Se le acercó un maestro de la ley y le dijo: “Maestro, te
+                seguiré a dondequiera que vayas.”<br />
+                Jesús le respondió: “Las zorras tienen guaridas y las aves del
+                cielo nidos, pero el Hijo del hombre no tiene dónde recostar la
+                cabeza.”<br />
+                Otro de sus discípulos le dijo: “Señor, permíteme ir primero a
+                enterrar a mi padre.”<br />
+                —Sígueme —le replicó Jesús—, y deja que los muertos entierren a
+                sus muertos.<br />
+              </li>
+
+              <li>
+                <b>La Biblia de las Américas (LBLA)</b><br />
+                Viendo Jesús una multitud a su alrededor, dio orden de pasar al
+                otro lado.<br />
+                Y un escriba se le acercó y le dijo: Maestro, te seguiré
+                adondequiera que vayas.<br />
+                Jesús le dijo: Las zorras tienen madrigueras y las aves del
+                cielo nidos, pero el Hijo del Hombre no tiene dónde recostar la
+                cabeza.<br />
+                Otro de los discípulos le dijo: Señor, permíteme que vaya
+                primero y entierre a mi padre.<br />
+                Pero Jesús le dijo: Sígueme, y deja que los muertos entierren a
+                sus muertos.<br />
+              </li>
+
+              <li>
+                <b>Interlineal Griego-Español (traducción literal)</b><br />
+                Y viendo Jesús a la multitud alrededor de él, mandó pasar al
+                otro lado.<br />
+                Y acercándose un escriba le dijo: Maestro, te seguiré
+                dondequiera que vayas.<br />
+                Y le dice Jesús: Las zorras madrigueras tienen, y las aves del
+                cielo nidos; el Hijo del Hombre, sin embargo, no tiene dónde
+                reclinar la cabeza.<br />
+                Otro de los discípulos le dijo: Señor, permíteme primero ir y
+                enterrar a mi padre.<br />
+                Pero Jesús le dice: Sígueme, y deja a los muertos enterrar a sus
+                propios muertos.<br />
+              </li>
+            </ol>
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
+            <ol>
+              <li>
+                <b>Lucas 9,57-62</b><br />
+                Relato paralelo más extenso y con tres encuentros:<br />
+                • Un hombre le dice: “Te seguiré a dondequiera que vayas”. Jesús
+                responde con la misma frase de las zorras y aves.<br />
+                • Otro pide enterrar a su padre, y Jesús le dice: “Deja que los
+                muertos entierren a sus muertos”.<br />
+                • Un tercero pide despedirse de su familia, y Jesús replica:
+                “Nadie que pone la mano en el arado y mira hacia atrás es apto
+                para el Reino de Dios”.<br />
+              </li>
+
+              <li>
+                <b>Mateo 19,21-22</b><br />
+                El joven rico recibe la invitación de Jesús: “Si quieres ser
+                perfecto, vende lo que tienes, dáselo a los pobres, y ven,
+                sígueme”.<br />
+                Tema paralelo: desprendimiento radical para seguir a Cristo.<br />
+              </li>
+
+              <li>
+                <b>Lucas 14,25-27</b><br />
+                Jesús exige renunciar incluso a los vínculos familiares más
+                fuertes para ser su discípulo.<br />
+                “El que no odia a su padre, madre, mujer, hijos, hermanos y
+                hasta su propia vida, no puede ser mi discípulo”.<br />
+              </li>
+
+              <li>
+                <b>Juan 12,25-26</b><br />
+                Jesús enseña que el que ama su vida la perderá, y que el que le
+                sirve debe seguirle.<br />
+                Tema paralelo: el seguimiento implica entrega total de la
+                vida.<br />
+              </li>
+
+              <li>
+                <b>1 Reyes 19,19-21</b><br />
+                El llamado de Eliseo por Elías. Eliseo pide despedirse de sus
+                padres, y luego deja todo para seguir al profeta.<br />
+                Paralelismo: dejar la familia para seguir una vocación
+                divina.<br />
+              </li>
+            </ol>
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Temas</summary>
+            <ol>
+              <li>
+                <b>El seguimiento radical de Cristo</b><br />
+                Jesús exige una decisión firme y absoluta: seguirlo no admite
+                condiciones ni retrasos.<br />
+                La prioridad es Él mismo, por encima de cualquier obligación
+                social, religiosa o familiar.<br />
+              </li>
+
+              <li>
+                <b>La pobreza y el desprendimiento</b><br />
+                “El Hijo del hombre no tiene dónde reclinar la cabeza” muestra
+                que el discipulado implica renunciar a la seguridad material.<br />
+                Teología del seguimiento en pobreza: el discípulo comparte el
+                estilo de vida austero de Cristo.<br />
+              </li>
+
+              <li>
+                <b>La primacía del Reino de Dios</b><br />
+                Dejar incluso el deber filial de enterrar al padre indica que
+                nada puede anteponerse a la misión del Reino.<br />
+                Jesús reordena las prioridades: lo eterno tiene más valor que lo
+                temporal.<br />
+              </li>
+
+              <li>
+                <b>La identidad del Hijo del Hombre</b><br />
+                Título mesiánico y escatológico que resalta la paradoja: siendo
+                el juez futuro y glorioso, en su vida terrena vive sin
+                seguridades.<br />
+                Refuerza la cristología de la kenosis (despojo voluntario de su
+                gloria).<br />
+              </li>
+
+              <li>
+                <b>La urgencia de la vocación</b><br />
+                Jesús llama en el presente, no para después. El seguimiento
+                requiere disponibilidad inmediata.<br />
+                Teología de la gracia: la llamada es don de Dios y debe
+                responderse sin demora.<br />
+              </li>
+            </ol>
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
+            <ol>
+              <li>
+                <b>San Jerónimo (Comentario al Evangelio de Mateo, 1,8,18)</b
+                ><br />
+                “El escriba que se acercó a Jesús lo llamó Maestro, no Señor.
+                Por eso, aunque promete seguirlo, no comprende todavía la
+                dignidad de Cristo. Jesús le muestra que seguirle implica
+                pobreza y despojo: ‘El Hijo del Hombre no tiene dónde reclinar
+                la cabeza’.”<br />
+              </li>
+
+              <li>
+                <b>San Juan Crisóstomo (Homilía 27 sobre Mateo)</b><br />
+                “No dijo Jesús: no me sigas, sino que le manifestó la
+                dificultad: pobreza, incomodidad, desprecio. Así el discípulo
+                podía decidir libremente, sabiendo que el camino del Evangelio
+                no es de honores humanos, sino de renuncia.”<br />
+              </li>
+
+              <li>
+                <b>San Agustín (Sermón 100,3)</b><br />
+                “Cuando el Señor dice: ‘Deja que los muertos entierren a sus
+                muertos’, no manda despreciar la piedad filial, sino enseñar que
+                la vida eterna es más urgente. Los que no creen están muertos en
+                espíritu; los que creen, viven.”<br />
+              </li>
+
+              <li>
+                <b>Orígenes (Comentario a Mateo, 13,1)</b><br />
+                “Jesús, al decir que el Hijo del Hombre no tiene dónde reclinar
+                la cabeza, muestra que la verdadera morada del Verbo es el
+                corazón puro de los creyentes. Allí quiere descansar Cristo, más
+                que en templos de piedra.”<br />
+              </li>
+
+              <li>
+                <b>San Hilario de Poitiers (Comentario sobre Mateo, 8,18)</b
+                ><br />
+                “El mar al que manda pasar representa el tránsito de este mundo
+                al otro. Nadie puede seguir a Cristo si no deja atrás las
+                preocupaciones de la carne y se decide a entrar en la nueva
+                vida.”<br />
+              </li>
+            </ol>
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
+            <ol>
+              <li>
+                <b>Catecismo de la Iglesia Católica (n. 2544)</b><br />
+                “Jesús manda a sus discípulos preferirle a Él a todo y a todos y
+                les propone renunciar a todos sus bienes por Él y por el
+                Evangelio. Poco antes de su pasión les dio como ejemplo a la
+                viuda pobre de Jerusalén que, en su indigencia, dio todo lo que
+                tenía para vivir. El precepto del desprendimiento de las
+                riquezas es obligatorio para entrar en el Reino de los
+                cielos.”<br />
+              </li>
+
+              <li>
+                <b>Catecismo de la Iglesia Católica (n. 1005)</b><br />
+                “El seguimiento de Cristo exige a veces dejar los deberes más
+                sagrados según la carne. Jesús dijo: ‘Deja que los muertos
+                entierren a sus muertos’. Con ello no desprecia la piedad
+                filial, sino que muestra la urgencia del Reino que reclama
+                entrega total.”<br />
+              </li>
+
+              <li>
+                <b>Concilio Vaticano II, Lumen Gentium (n. 42)</b><br />
+                “Los consejos evangélicos de castidad, pobreza y obediencia,
+                fundados en las palabras y ejemplos del Señor, constituyen un
+                don divino que la Iglesia recibió de su Señor y que conserva
+                siempre con su gracia. (...) El seguimiento de Cristo es una
+                llamada a la caridad perfecta.”<br />
+              </li>
+
+              <li>
+                <b
+                  >San Juan Pablo II, Exhortación Apostólica Vita Consecrata (n.
+                  16)</b
+                ><br />
+                “Las palabras de Jesús: ‘El Hijo del Hombre no tiene dónde
+                reclinar la cabeza’, manifiestan la radicalidad de la pobreza
+                evangélica. Quien sigue a Cristo está llamado a compartir su
+                mismo destino de inseguridad humana, pero de confianza absoluta
+                en el Padre.”<br />
+              </li>
+
+              <li>
+                <b
+                  >Papa Francisco, Homilía en Casa Santa Marta (5 de julio de
+                  2016)</b
+                ><br />
+                “Jesús pide seguirlo sin condiciones. A uno le dice que no
+                tendrá seguridad, ni siquiera un lugar donde descansar. A otro
+                le pide no postergar la decisión. El Reino no admite excusas ni
+                demoras: el seguimiento es ahora.”<br />
+              </li>
+            </ol>
           </details>
         </li>
         <!-- +++++++++++++++ -->
