--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -446,20 +446,20 @@
             <ol>
               <li>Morada 1 <br>
                 GRACIA [Inceptum Divinum]: BÚSQUEDA DEL BIEN <br>
-                Ingredere hanc mansionem: ORACIÓN <br>
-                Transi ad sequentem mansionem:INICIAR LA CONVERSIÓN PERMANENTE<br>
+                Responsum : ORACIÓN <br>
+                Transi ad sequentem mansionem:INICIAR LA CONVERSIÓN PERMANENTE [BIEN] <br>
               </li>
 
               <li>Morada 2 <br>
-                GRACIA [Inceptum Divinum]: BÚSQUEDA DE CONOCIMIENTO DEL SEÑOR [LECTIO] <br>
-                Ingredere hanc mansionem: INICIAR LA CONVERSIÓN PERMANENTE <br>
-                Transi ad sequentem mansionem: PERSEVERANCIA <br>
+                GRACIA [Inceptum Divinum]: BÚSQUEDA  DEL SEÑOR   <br>
+                Responsum :  VIDA DE FE [LECTIO, MISA] <br>
+                Transi ad sequentem mansionem: PERSEVERANCIA [BIEN Y VERDAD]<br>
               </li>
 
               <li>Morada 3 <br>
                 GRACIA [Inceptum Divinum]:  BÚSQUEDA DE ORDEN Y MÉTODO<br>
-                Ingredere hanc mansionem: PERSEVERANCIA <br>
-                Transi ad sequentem mansionem: HUMILDAD <br>
+                Responsum : OBEDIENCIA [DISCIPLINA, PACIENCIA, CONFIANZA] <br>
+                Transi ad sequentem mansionem: HUMILDAD [BIEN, VERDAD, CARIDAD]<br>
               </li>
             </ol>
           <h2>SUMMARIUM</h2> 
@@ -475,10 +475,10 @@
           <h3>GRATIA MANENS</h3>
           <li>HUMILDAD, ES LA PUERTA A LA 4ta MORADA </li>
           <li> Humildad principio y vivencia de la verdad </li>
-          <li> El humilde Es el que confía en Dios </li>
-          <li> Implica estudio conocimiento Paciencia, dedicación </li>
-          <li> La humildad me aleja de la angustia, la inquietud y la preocupación Que son tentaciones y me da paz, esperanza, paciencia y confianza, porque el humilde vive en Dios </li>
-          
+          <li> El humilde Es el que vive en el Señor, y confía en Él porque lo conoce </li>
+          <li> Implica estudio, conocimiento, Paciencia, dedicación </li>
+          <li> La humildad me aleja de la angustia, la inquietud y la preocupación, Que son tentaciones, y me da paz, esperanza, paciencia y confianza, porque el humilde vive en Dios </li>
+          <li>Vivir en la Verdad, conociendo al Señor, confiando en él, y obedeciendo su Palabra. </li>
           </ol>
         </details></li> 
         <!-- ++++++++++++++++++++++++++++++ -->
