--- a/ecclesia/lectio/mateo/mateo8.html
+++ b/ecclesia/lectio/mateo/mateo8.html
@@ -1608,9 +1608,16 @@
           <details class="select">
             <summary>Metanoia</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>El llamado es una Gracia, y espera la respuesta correcta</li>
+              <li>La Gracia es siempre actual, es para hoy</li>
+              <li>
+                Reconocer las implicancias del seguimiento, cmo dejar las
+                preocupaciones de la vida pasada
+              </li>
+              <li>
+                El llamado implica: la Gracia de La pobreza, obediencia y
+                castidad
+              </li>
               <li></li>
             </ol>
           </details>
