--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -461,6 +461,7 @@
                 Responsum : OBEDIENCIA [DISCIPLINA, PACIENCIA, CONFIANZA] <br>
                 Transi ad sequentem mansionem: HUMILDAD [BIEN, VERDAD, CARIDAD]<br>
               </li>
+              <p><b>DISCIPLINA</b>: Separar para todo, tiempo y Lugar, esto de manera ordinaria.</p>
             </ol>
           <h2>SUMMARIUM</h2> 
         <ol>
@@ -478,7 +479,7 @@
           <li> El humilde Es el que vive en el Señor, y confía en Él porque lo conoce </li>
           <li> Implica estudio, conocimiento, Paciencia, dedicación </li>
           <li> La humildad me aleja de la angustia, la inquietud y la preocupación, Que son tentaciones, y me da paz, esperanza, paciencia y confianza, porque el humilde vive en Dios </li>
-          <li>Vivir en la Verdad, conociendo al Señor, confiando en él, y obedeciendo su Palabra. </li>
+          <li><b>Vivir en la Verdad, conociendo al Señor, confiando en él, y obedeciendo su Palabra.</b> </li>
           </ol>
         </details></li> 
         <!-- ++++++++++++++++++++++++++++++ -->
