--- a/ecclesia/lectio/mateo/mateo9.html
+++ b/ecclesia/lectio/mateo/mateo9.html
@@ -21,7 +21,7 @@
     <br />
     <br />
     <!-- ****************************************************************** -->
-    <h1 class="init"></h1>
+    <h1 class="init">Mateo 9</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor,
       <br />
@@ -37,18 +37,35 @@
       <h1>TEMAS</h1>
       <div>
         <ol>
-          li.li*7>a[href="#$"]
+          <li class="li"><a href="#1">Curación de un paralítico. Mt 9, 1-8</a></li>
+          <li class="li"><a href="#2">Vocación de Mateo. Mt 9,9</a></li>
+          <li class="li"><a href="#3">Comida con pecadores. Mt 9,10-13</a></li>
+          <li class="li"><a href="#4">Discusión sobre el ayuno. Mt 9,14-17</a></li>
+          <li class="li"><a href="#5">Una niña resucitada y una mujer sanada Mt 9,18-26</a></li>
+          <li class="li"><a href="#6">Jesús cura a dos ciegos. Mt 9,27-31</a></li>
+          <li class="li"><a href="#7">Curación de un endemoniado mudo. Mt 9,32-34</a></li>
+          <li class="li"><a href="#8">Compasión hacia la muchedumbre. Mt 9, 35-38</a></li>
         </ol>
       </div>
     </section>
     <!-- ****************************************************************** -->
     <section id="1">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Curación de un paralítico. Mt 9, 1-8</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Curación de un paralítico.	<br>
+Mat 9:1 Subiendo a la barca, pasó a la otra orilla y vino a su ciudad. 	<br>
+Mat 9:2 En esto le trajeron un paralítico postrado en una camilla. Viendo Jesús la fe de ellos, dijo al paralítico: «¡Ánimo!, hijo, tus pecados te son perdonados.» 	<br>
+Mat 9:3 Pero he aquí que algunos escribas dijeron para sí: «Éste está blasfemando.» 	<br>
+Mat 9:4 Jesús, conociendo sus pensamientos, dijo: «¿Por qué pensáis mal en vuestros corazones? ¿Qué es más fácil, decir: “Tus pecados te son perdonados”, o decir: 	<br>
+Mat 9:5 “Levántate y anda”? 	<br>
+Mat 9:6 Pues para que sepáis que el Hijo del hombre tiene en la tierra poder de perdonar pecados —dice entonces al paralítico—: “Levántate, toma tu camilla y vete a tu casa”.» 	<br>
+Mat 9:7 Él se levantó y se fue a su casa. 	<br>
+Mat 9:8 Y al ver esto, la gente temió y glorificó a Dios, que había dado tal poder a los hombres. 	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -104,12 +121,13 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="2">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Vocación de Mateo. Mt 9,9</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 9:9 Cuando se iba de allí, al pasar vio Jesús a un hombre llamado Mateo, sentado en el despacho de impuestos, y le dice: «Sígueme.» Él se levantó y le siguió. 	<br></p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -167,12 +185,17 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="3">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Comida con pecadores. Mt 9,10-13</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 9:10 Y sucedió que estando él a la mesa en la casa, vinieron muchos publicanos y pecadores, y estaban a la mesa con Jesús y sus discípulos. 	<br>
+Mat 9:11 Al verlo los fariseos decían a los discípulos: «¿Por qué come vuestro maestro con los publicanos y pecadores?» 	<br>
+Mat 9:12 Mas él , al oírlo, dijo: «No necesitan médico los que están fuertes sino los que están mal. 	<br>
+Mat 9:13 Id, pues, a aprender qué significa Misericordia quiero, que no sacrificio. Porque no he venido a llamar a justos, sino a pecadores.» 	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -229,12 +252,17 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="4">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Discusión sobre el ayuno. Mt 9,14-17</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 9:14 Entonces se le acercan los discípulos de Juan y le dicen: «¿Por qué nosotros y los fariseos ayunamos, y tus discípulos no ayunan?» 	<br>
+Mat 9:15 Jesús les dijo: «¿Pueden acaso los invitados a la boda ponerse tristes mientras el novio está con ellos? Días vendrán en que les será arrebatado el novio; entonces ayunarán. 	<br>
+Mat 9:16 Nadie echa un remiendo de paño sin tundir en un vestido viejo, porque lo añadido tira del vestido, y se produce un desgarrón peor. 	<br>
+Mat 9:17 Ni tampoco se echa vino nuevo en pellejos viejos; pues de otro modo, los pellejos revientan, el vino se derrama, y los pellejos se echan a perder; sino que el vino nuevo se echa en pellejos nuevos, y así ambos se conservan.» 	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -291,12 +319,22 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="5">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Una niña resucitada y una mujer sanada Mt 9,18-26</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 9:18 Así les estaba hablando, cuando se acercó un magistrado y se postraba ante él diciendo: «Mi hija acaba de morir, pero ven, impón tu mano sobre ella y vivirá.» 	<br>
+Mat 9:19 Jesús se levantó y le siguió junto con sus discípulos. 	<br>
+Mat 9:20 En esto, una mujer que padecía flujo de sangre desde hacía doce años se acercó por detrás y tocó la orla de su manto. 	<br>
+Mat 9:21 Pues se decía para sí: «Con sólo tocar su manto, me salvaré.» 	<br>
+Mat 9:22 Jesús se volvió, y al verla le dijo: «¡Ánimo!, hija, tu fe te ha salvado.» Y se salvó la mujer desde aquel momento. 	<br>
+Mat 9:23 Al llegar Jesús a casa del magistrado y ver a los flautistas y la gente alborotando, 	<br>
+Mat 9:24 decía: «¡Retiraos! La muchacha no ha muerto; está dormida.» Y se burlaban de él. 	<br>
+Mat 9:25 Mas, echada fuera la gente, entró él, la tomó de la mano, y la muchacha se levantó. 	<br>
+Mat 9:26 Y esta noticia se divulgó por toda aquella comarca. 	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -353,12 +391,19 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="6">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Jesús cura a dos ciegos. Mt 9,27-31</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 9:27 Cuando Jesús se iba de allí, le siguieron dos ciegos gritando: «¡Ten piedad de nosotros, Hijo de David!» 	<br>
+Mat 9:28 Y al llegar a casa, se le acercaron los ciegos, y Jesús les dice: «¿Creéis que puedo hacer eso?» Dícenle: «Sí, Señor.» 	<br>
+Mat 9:29 Entonces les tocó los ojos diciendo: «Hágase en vosotros según vuestra fe.» 	<br>
+Mat 9:30 Y se abrieron sus ojos. Jesús les ordenó severamente: «¡Mirad que nadie lo sepa!» 	<br>
+Mat 9:31 Pero ellos, en cuanto salieron, divulgaron su fama por toda aquella comarca.	<br>
+Cuando Jesús se iba de allí, le siguieron dos ciegos gritando: «¡Ten piedad de nosotros, Hijo de David!» 	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -415,12 +460,92 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="7">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Curación de un endemoniado mudo. Mt 9,32-34</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 9:32 Salían ellos todavía, cuando le presentaron un mudo endemoniado. 	<br>
+Mat 9:33 Y expulsado el demonio, rompió a hablar el mudo. Y la gente, admirada, decía: «Jamás se vio cosa igual en Israel.» 	<br>
+Mat 9:34 Pero los fariseos decían: «Por el Príncipe de los demonios expulsa a los demonios.» 	<br>
+Mat 9:32 	<br>
+Curación de un endemoniado mudo.	<br>
+Salían ellos todavía, cuando le presentaron un mudo endemoniado. 	<br>
+Mat 9:33 Y expulsado el demonio, rompió a hablar el mudo. Y la gente, admirada, decía: «Jamás se vio cosa igual en Israel.» 	<br>
+Mat 9:34 Pero los fariseos decían: «Por el Príncipe de los demonios expulsa a los demonios.» 	<br>
+</p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p>
+              <br />
+              <br />
+            </p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="8">
+      <h2 class="subtitulo">Compasión hacia la muchedumbre. Mt 9, 35-38</h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+            <p>Mat 9:35 Jesús recorría todas las ciudades y aldeas, enseñando en sus sinagogas, proclamando la Buena Nueva del Reino y sanando toda enfermedad y toda dolencia. 	<br>
+Mat 9:36 Y al ver a la muchedumbre, sintió compasión de ella, porque estaban vejados y abatidos como ovejas que no tienen pastor. 	<br>
+Mat 9:37 Entonces dice a sus discípulos: «La mies es mucha y los obreros pocos. 	<br>
+Mat 9:38 Rogad, pues, al Dueño de la mies que envíe obreros a su mies.» 	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
