--- a/ecclesia/lectio/mateo/mateo8.html
+++ b/ecclesia/lectio/mateo/mateo8.html
@@ -1660,30 +1660,150 @@
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
+            <p>
+              En general, el sentido central se mantiene: una gran tempestad,
+              Jesús calma la tempestad, sorprende a los discípulos.
+            </p>
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
+            <p>
+              Textos paralelos directos en los evangelios sinópticos<br />
+
+              Marcos 4,35-41 → Relato casi idéntico, con más detalles narrativos
+              (ej. Jesús en la popa sobre un cabezal).<br />
+              Lucas 8,22-25 → Relato paralelo, con acentos en la reacción de los
+              discípulos y la pregunta sobre la identidad de Jesús.<br /><br />
+
+              Temas relacionados en la Escritura<br />
+
+              Jonás 1,4-16 → Jonás dormido en la nave durante la tempestad;
+              paralelismo claro con Jesús dormido, pero con contraste en la
+              obediencia y autoridad.<br />
+              Salmo 107,23-30 → Dios calma la tormenta y lleva a los marineros
+              al puerto deseado; anticipa la acción de Jesús sobre el mar.<br />
+              Éxodo 14,21-22 → El poder de Dios sobre las aguas en el paso del
+              Mar Rojo; Jesús manifiesta aquí el mismo dominio sobre la
+              creación.<br />
+              Job 38,8-11 → Dios interroga a Job recordando que Él puso límites
+              al mar; Jesús se muestra como quien comparte ese poder divino.<br />
+            </p>
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Temas</summary>
+            <ol>
+              <li>
+                La identidad de Jesús: el que domina las fuerzas de la
+                naturaleza, manifestando poder divino.<br />
+              </li>
+              <li>
+                La fe y el miedo: contraposición entre la confianza en Cristo y
+                la fragilidad de la fe de los discípulos.<br />
+              </li>
+              <li>
+                El señorío de Cristo sobre la creación: revela que las fuerzas
+                cósmicas no tienen autonomía frente al Hijo de Dios.<br />
+              </li>
+              <li>
+                La pedagogía del discipulado: Jesús forma a los discípulos
+                permitiendo la prueba y corrigiendo su poca fe.<br />
+              </li>
+              <li>
+                La revelación progresiva: la pregunta “¿Quién es éste?” abre al
+                descubrimiento de Jesús como verdadero Hijo de Dios.<br />
+              </li>
+            </ol>
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
+            <ol>
+              <li>
+                San Jerónimo (Comentario a Mateo 1,8,23): "La tempestad en el
+                mar significa las persecuciones que sobrevienen a la Iglesia, y
+                el Señor parece dormir cuando los fieles se turban, para que al
+                despertarlo con la oración, se manifieste su poder." <br />
+              </li>
+
+              <li>
+                San Agustín (Sermón 63,1-2): "En cada uno de nosotros hay un
+                mar; nuestras almas son agitadas por las tempestades de las
+                pasiones. Cuando Cristo duerme en ti, es porque has olvidado tu
+                fe. Despiértalo, es decir, vuelve a recordar lo que crees, y se
+                hará bonanza." <br />
+              </li>
+
+              <li>
+                Orígenes (Homilías sobre Mateo, 28): "El Señor duerme no por
+                negligencia, sino para que sus discípulos comprendan su
+                debilidad y clamen a Él. Así, la prueba se convierte en ocasión
+                de fe más firme." <br />
+              </li>
+
+              <li>
+                San Juan Crisóstomo (Homilía sobre Mateo 28,2): "Que estaba
+                dormido muestra su verdadera humanidad; que mandó al mar y a los
+                vientos y lo obedecieron, muestra su divinidad." <br />
+              </li>
+
+              <li>
+                San Hilario de Poitiers (Comentario a Mateo 8,5): "Cristo da paz
+                al mar embravecido para que entendamos que solo Él puede dar
+                reposo al corazón humano perturbado." <br />
+              </li>
+            </ol>
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
+            <ol>
+              <li>
+                Catecismo de la Iglesia Católica (n. 2616): "La oración de los
+                discípulos durante la tormenta es un ejemplo de la oración de
+                súplica, despertando la fe y revelando quién es Jesús: el Señor
+                a quien incluso los vientos y el mar obedecen." <br />
+              </li>
+
+              <li>
+                Catecismo de la Iglesia Católica (n. 671): "La Iglesia
+                peregrina, en sus sacramentos e instituciones, en el mundo
+                sometido todavía a la tempestad del mal y de la prueba, espera
+                con paciencia la plena manifestación del Señor que ha vencido."
+                <br />
+              </li>
+
+              <li>
+                San Juan Pablo II, Homilía en Génova (18 de mayo de 1985): "El
+                episodio de la tempestad calmada es una parábola viva de la
+                Iglesia de todos los tiempos: zarandeada por las olas de la
+                historia, pero segura porque Cristo está en la barca." <br />
+              </li>
+
+              <li>
+                Benedicto XVI, Ángelus (26 de junio de 2011): "La barca es
+                imagen de la Iglesia; también hoy puede ser sacudida por los
+                vientos y las olas, y parece que el Señor duerme. Pero sabemos
+                que Él está presente, y que la fe en Él vence el miedo." <br />
+              </li>
+
+              <li>
+                Papa Francisco, Homilía en la Plaza de San Pedro durante la
+                pandemia (27 de marzo de 2020): "Nos encontramos temerosos y
+                perdidos, como los discípulos en la tempestad. Hemos comprendido
+                que no podemos seguir cada uno por nuestra cuenta, sino juntos,
+                con Jesús en la misma barca." <br />
+              </li>
+            </ol>
           </details>
         </li>
         <!-- +++++++++++++++ -->
@@ -1691,9 +1811,11 @@
           <details class="select">
             <summary>Metanoia</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>La prueba es usada como medio de formación pedagógica</li>
+              <li>La revelación es progresiva, y así se va asimilando para ser bse de nuevos conocimientos</li>
+              <li>El Señor conoce el mejor momento para intervenir en el mundo</li>
+              <li>La prueba es ocasión de crecer en la fe</li>
+              <li>La paz es don, la prueba lo muestra</li>
               <li></li>
             </ol>
           </details>
